# daw_integer

./: CMakeLists.txt  README.md
cmake/: daw-integerConfig.cmake.in
cmake/test_project/: CMakeLists.txt  test.cpp
include/daw/integers/: daw_signed.h
include/daw/integers/impl/: daw_signed_clanggcc.h  daw_signed_error_handling.h  daw_signed_impl.h  daw_signed_msvc.h
tests/: CMakeLists.txt
tests/src/: daw_integers_signed_test.cpp
